test_files/test_script_mixed_1_output.txt
Kuch to gadbad hai. Daya, pata karo!
Gadbad shayad line 26 mein hai
    print(""Hello World" itna hai :","Hello World")
            ^
SyntaxError: invalid syntax
